deploy/kind/traefik/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-ingress-controller
      containers:
        - name: traefik
          image: traefik:v2.11
          args:
            - "--entrypoints.web.address=:80"
            - "--providers.kubernetesingress"
            - "--api.insecure=true"
          ports:
            - name: web
              containerPort: 80
            - name: admin
              containerPort: 8080
